Pass the focus reason through to the control on mouse press

Otherwise, a TextInput item will always receive OtherFocusReason when
clicking into it.

Add a test that simulates focus changes with mouse and keys, records
the incoming focus events and verifies the correct focus reason is set
in the event. Qt Quick provides no mechanism to access the focus reason
from within QML (onActiveFocusChange only has a bool parameter, the
focusReason property exists only in QtQuickControl).

Task-number: QTBUG-75862
Change-Id: Ifea95c7ef2ac88c6c8e8bbdc8d2dbe5205ff922e
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit bbcbb7c78f2f07e6c5e380ec5c018ac2a7abf292)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>